--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,8 @@
   </button>
 </form>
 <div class="ui grid posts">
-  <app-article>
+  <app-article *ngFor="let foobar of articles"
+               [article]="foobar">
+
   </app-article>
 </div>
