--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
   </button>
 </form>
 <div class="ui grid posts">
-  <app-article *ngFor="let foobar of articles"
+  <app-article *ngFor="let foobar of sortedArticles()"
                [article]="foobar">
 
   </app-article>
